# daylight

./: .gitignore  Makefile  README.md  WRITEUP.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py
core/: admin.py  models.py  schema.py  tasks.py  tests.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py
core/services/: __init__.py  device_service.py  energy_service.py  telemetry_service.py
docker/django/: Dockerfile
