[project]
name = "assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.1",
    "factory-boy>=3.3.3",
    "graphene-django>=3.2.3",
    "psycopg>=3.3.2",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
